# template-streamlit-app

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  deployment_config.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build_image.yml
{{cookiecutter.project_slug}}/odp/app/{{cookiecutter.project_slug}}/: __main__.py  app.py
