[tool.poetry]
name = "ODP App Template"
version = "0.1.0"
description = "ODP App template"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
cookiecutter = "^1.7.3"
typing-extensions = "^4.0.0"
streamlit = "^1.9.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
